<?xml version="1.0" encoding="UTF-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_drawer_home"/>
        <item
            android:id="@+id/nav_help_relax"
            android:title="@string/nav_help_relax" />
        <item
            android:id="@+id/nav_help_contact"
            android:title="@string/nav_help_contact"/>
        <item
            android:id="@+id/nav_data"
            android:title="@string/nav_data"/>

    </group>

    <item android:title="@string/nav_sub2_header">
        <menu>
            <item
                android:id="@+id/preferences"
                android:title="@string/nav_sub2_item_1"
                android:icon="@drawable/ic_drawer_settings"/>

            <item
                android:id="@+id/about"
                android:title="@string/nav_sub2_item_2"
                android:icon="@drawable/ic_drawer_about"/>
            <item
                android:id="@+id/help"
                android:title="@string/nav_sub2_item_3"
                android:icon="@drawable/ic_help"/>
        </menu>
    </item>
</menu>